2007-10-22  Graham Cobb  <g+770@cobb.uk.net>

	* event-db.c (buzzer): Resolve clone to handle alarms for recurring events correctly.
	Unref event before deallocating pointer to it.

2007-09-07  Graham Cobb  <g+770@cobb.uk.net>

	* event.c (event_source_finalize): Unfortunately, 
	if event_db_find_by_uid cannot find the specified UID
	it creates an event with the UID (but no data).  
	This means that the removal from the hash table can fail.  
	The check can be re-instated when the event_db_find_by_uid bug is fixed

2007-06-09  Florian Boor <florian@linuxtogo.org>

	* Release version 0.90
	* doc/libeventdb-docs.sgml: Fix org and addreess.
	* configure.ac, Makefile.am, doc/*am: Several changes
          and fixes to pass distcheck.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Change version to 0.90.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Update email address.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (libeventdb_la_LDFLAGS): Bump SO.
	* configure.ac: Bump to version 0.9.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	* sqlite.c (do_event_mark_unacknowledged): Don't add the same
	entry to the database multiple times.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (event_calendar_get_uid): Don't take a GError.
	* event-cal.c (event_calendar_get_uid): Update.
	* event-db.c (event_db_find_calendar_by_uid): Likewise.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (event_db_error_punt): Fix documentation.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (event_db_error_punt): New prototype.
	* event-db.c (event_db_error_punt): New function.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	* event.c (event_remove): Return success.
	* gpe/event-db.h (event_remove): Return a boolean indicating
	success.

2007-02-13  Neal H. Walfield  <neal@gnu.org>

	Closes #14.
	* configure.ac: Remove libgpewidget dependency.  Add gobject-2.0
	dependency.